Make letters not move on mobile and tablet devices and fix positioning

--- a/src/sass/sections/_intro.scss
+++ b/src/sass/sections/_intro.scss
@@ -3,7 +3,12 @@
    ========================================================================== */
 
    .intro {
+    margin-top: -4rem;
     padding: 0 0.9375rem;
+
+    @include md {
+        margin-top: 0;
+    }
 
     .intro__image {
         grid-column: 1 / 13;
@@ -15,7 +20,7 @@
     
     .intro__figure {
         display: inline-block;
-        margin: 0 0 4rem 1rem;
+        margin: 0 0 1rem 1rem;
         width: 10rem;
         @include xsm {
             max-width: 100%;
@@ -78,8 +83,8 @@
 	display: inline-block;
 	overflow: hidden;
 	margin-left: -.25rem;
-	height: auto;
-	
+    height: auto;
+    
 	&__element {
 		position: relative;
 		display: inline-block;
@@ -96,7 +101,7 @@
             font-size: 3.875rem;
         }
         @media screen and (min-width: 1200px) {
-            font-size: 4.8125rem;
+            font-size: 4.6875rem;
         }
 		&:before,
 		&:after {
